Correção de bug para apresentação de produtores com "empate" de vitorias. Adicionado endpoints separados de consulta de min e max de vitorias.